# geoscan_pioneer_max

./: .directory  .gitmodules  LICENSE  README.md  backlog.txt  lib_list.txt
api-docs/: README.md  gs_board.md  gs_example.md  gs_flight.md  gs_interfaces.md  gs_logger.md  gs_mavlink.md  gs_module.md  gs_nodes.md  gs_sensors.md  gs_vision.md
builds/: README.md
code-server/: start-eth.py  start-eth.sh  start-wlan.py  start-wlan.sh
code-server/noetic/: start-eth.py  start-eth.sh  start-wlan.py  start-wlan.sh
doc/: gide.md  gide_max.md  gide_ros.md  gs_flight.md  gs_logger.md  gs_mavlink.md  gs_module.md  gs_nodes.md  gs_sensors.md  gs_service.md  guide.md  guide_max.md  networkmanager.md  protocol.md  web-ssh.md  wifi.md
geoscan_ws/: README.md  config_catkin.txt
geoscan_ws/classes/gs_board/: gs_board.md
geoscan_ws/classes/gs_led/: README.md  package.xml  setup.py
geoscan_ws/classes/gs_sensors/: setup.py
geoscan_ws/devel/: .catkin
geoscan_ws/install/: local_setup.sh  setup.sh
geoscan_ws/packeges/gs_board/: package.xml
geoscan_ws/packeges/gs_logger/: package.xml  setup.py
geoscan_ws/packeges/gs_module/: package.xml  setup.py
geoscan_ws/src/cv_bridge/: rosdoc.yaml
geoscan_ws/src/gs_board/: CMakeLists.txt  setup.py
geoscan_ws/src/gs_example/: CMakeLists.txt  README.md
geoscan_ws/src/gs_flight/: CMakeLists.txt  README.md  setup.py
geoscan_ws/src/gs_interfaces/: CMakeLists.txt  package.xml
geoscan_ws/src/gs_interfaces/msg/: PointGPS.msg  SimpleBatteryState.msg
geoscan_ws/src/gs_interfaces/srv/: Accel.srv  Gyro.srv  Led.srv  Log.srv  LpsPos.srv  LpsYaw.srv  Position.srv  PositionGPS.srv  Yaw.srv
geoscan_ws/src/gs_logger/: CMakeLists.txt  README.md
geoscan_ws/src/gs_mavlink/: CMakeLists.txt  package.xml
geoscan_ws/src/gs_module/: CMakeLists.txt  README.md
geoscan_ws/src/gs_nodes/: CMakeLists.txt  README.md  package.xml
geoscan_ws/src/gs_nodes/launch/: pioneer.launch
geoscan_ws/src/gs_nodes/src/: mavlink_node.py  ros_serial_node.py
geoscan_ws/src/gs_sensors/: CMakeLists.txt  README.md  package.xml
geoscan_ws/src/gs_service/: CMakeLists.txt  README.md
geoscan_ws/src/gs_service/srv/: Altitude.srv  LpsVel.srv  Pos.srv  Time.srv
geoscan_ws/src/gs_vision/: CMakeLists.txt  gs_vision.md  package.xml
geoscan_ws/src/gs_vision/launch/: apriltag_test.launch  aruco_test.launch  qrcode_test.launch
geoscan_ws/src/gs_vision/msg/: ArUco.msg  ArUco_array.msg
geoscan_ws/src/gs_vision/src/: apriltag_node.py  aruco_node.py  picamera_node.py  qrcode_node.py
geoscan_ws2/src/gs_board/: package.xml  setup.cfg  setup.py
geoscan_ws2/src/gs_example/: package.xml  setup.cfg  setup.py
geoscan_ws2/src/gs_flight/: package.xml  setup.cfg  setup.py
geoscan_ws2/src/gs_interfaces/: CMakeLists.txt  package.xml
geoscan_ws2/src/gs_interfaces/srv/: Gyro.srv  Info.srv  LpsPos.srv  LpsVel.srv  LpsYaw.srv
geoscan_ws2/src/gs_logger/: package.xml  setup.cfg  setup.py
geoscan_ws2/src/gs_module/: package.xml  setup.cfg  setup.py
geoscan_ws2/src/gs_nodes/: package.xml  setup.cfg  setup.py
geoscan_ws2/src/gs_sensors/: package.xml  setup.cfg  setup.py
guides/: guide_max.md  guide_ros.md  install_guide.md  networkmanager.md  protocol.md  ssh.md  wifi.md
linux_service/etc.dhcp/: dhcpd.conf
linux_service/etc.hostapd/: hostapd.conf
linux_service/etc.systemd.system/: code-server-eth.service  code-server-wlan.service  config-wlan.service  eth-butterfly.service  pioneer-bricks-eth.service  pioneer-bricks-wlan.service  web-eth-menu.service  web-wlan-menu.service  wlan-butterfly.service
linux_service/lib.systemd.system/: isc-dhcp-server.service
linux_service/usr.local.bin/: eth-butterfly.py  wlan-butterfly.py
lua/: pioneer_uart.lua  pioneer_uart_ap_1.4_1.5.6.lua  pioneer_uart_ap_1.5.7.lua  test_pioneer_uart.lua
mavlink/: mavlink_node.py  send_read.py  test_mavlink.py
pioneer-bricks/: main.py  pioneer.py  pioneer_bricks_eth.py  pioneer_bricks_wlan.py  start-eth.sh  start-wlan.sh
pioneer-bricks/noetic/: start-eth.sh  start-wlan.sh
pioneer-bricks/static/blockly/: board.js  (+14 more)
pioneer-bricks/templates/: index.html  layout.html
test_scripts/: new_send_read.py  pioneer_uart.lua  ros_serial_node_test.py  send_read.py  stress_test.py
web-menu/: config_wlan.sh  start-wlan.sh  utils.py  web-eth-menu.py  web-wlan-menu.py
web-menu/files/: index.html  ros_error.html
web-menu/melodic/: start-eth.sh  start-wlan.sh
web-menu/noetic/: start-eth.sh  start-wlan.sh
web-menu/templates/: index.html  list.html
workspace/: hello.py
(+274 files in other folders)
