<?xml version="1.0"?>
<package format="2">
  <name>gs_board</name>
  <version>0.0.0</version>
  <description>The gs_board package</description>
  <maintainer email="ilya@eadsoft.com">Ilya Danilenko</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python</buildtool_depend>
  <exec_depend>python</exec_depend>

  <export>
  </export>
</package>
