<?xml version="1.0"?>
<package format="2">
  <name>gs_interfaces</name>
  <version>0.0.0</version>
  <description>The gs_interfaces package</description>

  <maintainer email="ilya@eadsoft.com">Ilya Danilenko</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
